# office-open-xml-viewer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.lib.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy-pages.yml  deploy-site.yml  fuzz.yml  publish-vscode-extension.yml  publish.yml  release-mcp-server.yml
.storybook/: Introduction.mdx  main.ts
docs/: docx-layout-context-fragments-design.md  docx-layout-context-fragments-implementation-plan.md  docx-layout-engine-implementation-roadmap.md  docx-layout-engine-redesign.md  docx-layout-engine-series-a-plan.md  docx-layout-engine-series-b-plan.md  docx-layout-engine-series-c-plan.md  docx-layout-shared-primitives-audit.md  improvement-plan-2026-07-checklist.md  improvement-plan-2026-07.md  improvement-plan-2026-07b-checklist.md  improvement-plan-2026-07b.md
docs/superpowers/plans/: 2026-05-30-xlsx-tab-nav-buttons.md  2026-06-03-ooxml-math-phase1.md
docs/superpowers/specs/: 2026-05-30-xlsx-tab-nav-buttons-design.md  2026-06-03-ooxml-math-rendering-design.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_docx_parse.rs  fuzz_pptx_parse.rs  fuzz_rels.rs  fuzz_xlsx_parse.rs  fuzz_zip_handle.rs
rule-tests/: no-as-unknown-as-cast-test.yml  no-docx-display-scale-in-layout-test.yml  no-docx-layout-in-paint-test.yml  no-docx-measurement-in-fragment-paint-test.yml  no-docx-style-resolution-in-layout-paint-test.yml  no-unwrap-in-parser-production-test.yml
rules/: no-as-unknown-as-cast.yml  no-docx-display-scale-in-layout.yml  no-docx-layout-in-paint.yml  no-docx-measurement-in-fragment-paint.yml  no-docx-style-resolution-in-layout-paint.yml  no-unwrap-in-parser-production.yml
scripts/: append-wasm-reinit.mjs  check-docx-layout-boundaries.mjs  check-docx-layout-boundaries.test.mjs  check-docx-package-build.test.mjs  check-docx-public-api.mjs  check-docx-public-api.test.mjs  docx-layout-boundary-baseline.json
site/: .gitignore  README.md  astro.config.mjs  package.json
site/.astro/: data-store.json  settings.json
site/public/: cube3.glb
site/scripts/: copy-samples.mjs
site/src/components/: ApiReference.astro  Capabilities.astro  DemoBlock.astro  FrameworkSection.astro  LiveShowcase.astro  Nav.astro
site/src/layouts/: Base.astro  FormatPage.astro
site/src/lib/: api-reference.ts  demo-snippets.ts  live-pptx.ts  live.ts  snippets.ts  try.ts
site/src/pages/: docx.astro  index.astro  pptx.astro  (+2 more)
src/: diff.ts  index.ts
tests/smoke/: playwright.config.ts
(+3 files in other folders)
