[package]
name = "ooxml-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
docx-parser = { path = "../packages/docx/parser" }
pptx-parser = { path = "../packages/pptx/parser" }
xlsx-parser = { path = "../packages/xlsx/parser" }
ooxml-common = { path = "../packages/ooxml-common" }

# Use independent workspace for fuzzers so `cargo fuzz` doesn't pull the whole
# monorepo workspace (with its wasm32 cdylib targets) into the fuzz build.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_docx_parse"
path = "fuzz_targets/fuzz_docx_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pptx_parse"
path = "fuzz_targets/fuzz_pptx_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_xlsx_parse"
path = "fuzz_targets/fuzz_xlsx_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_zip_handle"
path = "fuzz_targets/fuzz_zip_handle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rels"
path = "fuzz_targets/fuzz_rels.rs"
test = false
doc = false
bench = false
